--- a/etc/rule_engin.toml
+++ b/etc/rule_engin.toml
@@ -5,13 +5,19 @@ server = "192.168.1.1"
 ports = [ 8001, 8001, 8002 ]
 
 
-
 [output]
+
+
     [output.email]
     enabled = true
 
-    ip = "10.0.0.1"
-    dc = "eqdc10"
+    EMAIL_HOST = 'smtp.partner.outlook.cn'
+    EMAIL_SMTP_PORT = ''
+    EMAIL_SSL_PORT = ''
+    EMAIL_FROM = ''
+    EMAIL_TO = ''
+    EMAIL_USERNAME = ''
+    EMAIL_PWD = ''
 
     [output.kafka]
     enabled = true
@@ -22,9 +28,7 @@ ports = [ 8001, 8001, 8002 ]
 
     [output.es]
     enabled = true
-
-    ip = "10.0.0.1"
-    dc = "eqdc10"
+    es_host=["10.10.1.2:9200", "10.10.1.3:9200"]
 
     [output.json]
     enabled = true
