--- a/etc/rule_engin.toml
+++ b/etc/rule_engin.toml
@@ -1,4 +1,4 @@
-title = "TOML Example"
+title = "rule_engine"
 
 [input]
 
@@ -15,7 +15,9 @@ title = "TOML Example"
     [redis.input]
     enabled = true
     server = "192.168.1.1"
-    ports = [ 8001, 8001, 8002 ]
+    ports = 6379
+    password = ""
+
 
 
 [output]
@@ -37,15 +39,24 @@ title = "TOML Example"
     ip = "10.0.0.1"
     dc = "eqdc10"
 
+
     [output.es]
     enabled = true
     es_host=["10.10.1.2:9200", "10.10.1.3:9200"]
 
+
     [output.json]
     enabled = true
+    path = ""
+
 
     [output.redis]
     enabled = true
+    server = "192.168.1.1"
+    ports = 6379
+    password = ""
+
+
 
     [output.rabbitmq]
     enabled = true
