--- a/rules/conn/2.yml
+++ b/rules/conn/2.yml
@@ -2,7 +2,7 @@ state: enable
 rule_id : sqli_get_01
 rule_tag: sqli
 rule_name: sqli_get_select
-rule_type: and
+rule_type: or
 
 detect_list:
   - field : network.ip
