--- a/etc/config.toml
+++ b/etc/config.toml
@@ -1,26 +1,28 @@
 title = "rule_engine"
 
 
+[config]
+    env = "dev"  # 环境 dev demo prod
+    logpath = "/var/log"
 
 
 
 [input]
-
-    [kafka.input]
+    [input.kafka]
     enabled = true
     server = "192.168.1.1"
     ports = [ 8001, 8001, 8002 ]
 
-    [rabbitmq.input]
-    enabled = true
-    server = "192.168.1.1"
-    ports = [ 8001, 8001, 8002 ]
+#    [input.rabbitmq]
+#    enabled = true
+#    server = "192.168.1.1"
+#    ports = [ 8001, 8001, 8002 ]
 
-    [redis.input]
-    enabled = true
-    server = "192.168.1.1"
-    ports = 6379
-    password = ""
+#    [input.redis]
+#    enabled = true
+#    server = "192.168.1.1"
+#    ports = 6379
+#    password = ""
 
 
 
