--- a/etc/config.yml
+++ b/etc/config.yml
@@ -8,8 +8,8 @@ logpath : "/var/log"
 input:
      kafka:
          enabled : true
-         server : "192.168.1.1"
-         ports : [ 8001, 8001, 8002 ]
+#         server : "192.168.1.1"
+         server : [ "192.168.1.1:9092", "192.168.1.2:9092", "192.168.1.3:9092" ]
 
 #    [input.rabbitmq]
 #    enabled : true
