--- a/etc/config.yml
+++ b/etc/config.yml
@@ -1,8 +1,7 @@
 name : "rule_engine"
 
 env : "dev"  # 环境 dev demo prod
-logpath : "/var/log"
-
+log-path : "/var/log"
 
 
 input:
@@ -21,7 +20,6 @@ input:
 #    server : "192.168.1.1"
 #    ports : 6379
 #    password : ""
-
 
 
 output:
@@ -63,16 +61,6 @@ output:
 #
 #    [output.rabbitmq]
 #    enabled : true
-
-
-
-
-
-
-
-
-
-
 
 
 
